[project]
name = "hello-mcp-server"
version = "0.0.1"
description = "A simple MCP server implementation"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "mcp>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
